--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "react-icons": "^4.9.0",
     "react-id-swiper": "^4.0.0",
     "react-loader-spinner": "^5.3.4",
+    "react-particles": "^2.12.2",
     "sanity": "^3.11.3",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
+    "tsparticles-slim": "^2.12.0",
     "typescript": "5.0.4"
   }
 }
